ProdIND/ProdPrograms/force-app/main/default/objects/CFD_STP_Check__c/CFD_STP_Check__c.object-meta.xml
<CustomObject>
    <label>CFD STP Check</label>
    <nameField>
        <displayFormat>CFD-{0000000}</displayFormat>
        <label>CFD STP Check Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CFD STP Checks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>