ProdIND/ProdPrograms/force-app/main/default/objects/CFD_STP_Check__c/fields/CFD_State__c.field-meta.xml
<CustomField>
    <fullName>CFD_State__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CFD State</label>
    <referenceTo>CFD_State_Master__c</referenceTo>
    <relationshipLabel>CFD STP Checks</relationshipLabel>
    <relationshipName>CFD_STP_Checks</relationshipName>
    <type>Lookup</type>
</CustomField>