ProdIND/ProdPrograms/force-app/main/default/objects/CFD_STP_Check__c/fields/New_2W_Thrshld_STP_Loan_Amount_c__c.field-meta.xml
<CustomField>
    <fullName>New_2W_Thrshld_STP_Loan_Amount_c__c</fullName>
    <label>New_2W_Thrshld_STP_Loan_Amount__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>