ProdIND/ProdPrograms/force-app/main/default/objects/CFD_STP_Check__c/fields/New_2W_Total_Exposure_c__c.field-meta.xml
<CustomField>
    <fullName>New_2W_Total_Exposure_c__c</fullName>
    <label>New_2W_Total_Exposure__c</label>
    <type>TextArea</type>
</CustomField>