ProdIND/ProdPrograms/force-app/main/default/objects/CFD_STP_Check__c/fields/PV_New_Thrshld_STP_Loan_Amount_c__c.field-meta.xml
<CustomField>
    <fullName>PV_New_Thrshld_STP_Loan_Amount_c__c</fullName>
    <label>PV_New_Thrshld_STP_Loan_Amount__c</label>
    <type>TextArea</type>
</CustomField>