ProdIND/ProdPrograms/force-app/main/default/objects/CFD_STP_Check__c/fields/Pv_New_Vehicle_Category_c__c.field-meta.xml
<CustomField>
    <fullName>Pv_New_Vehicle_Category_c__c</fullName>
    <label>Pv_New_Vehicle_Category__c</label>
    <type>TextArea</type>
</CustomField>