ProdIND/ProdPrograms/force-app/main/default/objects/CFD_STP_Check__c/fields/PV_Used_Refinance_STP_Thrshld_Amount_c__c.field-meta.xml
<CustomField>
    <fullName>PV_Used_Refinance_STP_Thrshld_Amount_c__c</fullName>
    <label>PV_Used_Refinance_STP_Thrshld_Amount__c</label>
    <type>TextArea</type>
</CustomField>