ProdIND/ProdPrograms/force-app/main/default/objects/CFD_STP_Check__c/fields/Threshold_STP_Loan_Amount_lakhs_c__c.field-meta.xml
<CustomField>
    <fullName>Threshold_STP_Loan_Amount_lakhs_c__c</fullName>
    <label>Threshold_STP_Loan_Amount_lakhs__c</label>
    <type>TextArea</type>
</CustomField>