ProdIND/ProdPrograms/force-app/main/default/objects/CFD_STP_Check__c/fields/Total_Exposure_lakhs_c__c.field-meta.xml
<CustomField>
    <fullName>Total_Exposure_lakhs_c__c</fullName>
    <label>Total_Exposure_lakhs__c</label>
    <type>TextArea</type>
</CustomField>