ProdIND/ProdPrograms/force-app/main/default/objects/CFD_STP_Check__c/fields/Used_2W_Vehicle_category_c__c.field-meta.xml
<CustomField>
    <fullName>Used_2W_Vehicle_category_c__c</fullName>
    <label>Used_2W_Vehicle_category__c</label>
    <type>TextArea</type>
</CustomField>