ProdIND/ProdPrograms/force-app/main/default/objects/CFD_STP_Check__c/fields/Vehicle_category_c__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_category_c__c</fullName>
    <label>Vehicle_category__c</label>
    <type>TextArea</type>
</CustomField>